--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "child_process": "^1.0.2",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "firebase": "^11.2.0",
+    "firebase-admin": "^13.0.2",
     "openai": "^4.77.0",
     "puppeteer": "^23.11.1",
     "puppeteer-core": "^23.11.1",
